Fixed conflict between routes and replaced CURRENT_DATE with CURRENT_TIMESTAMP on the query to get the users that have passed the monthly limit